SERVER-47359 ShardRegistry reload can race with RSM updates to ShardRegistry